--- a/style.css
+++ b/style.css
@@ -40,15 +40,16 @@ li{
     
   }
 .imagem-fundo{
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 425px;
+    right: 110px;
     z-index: 1;
+    display: flex;
   }
 .imagem-sobreposta{
-    position: absolute;
+    position: relative;
     top: 100px;
-    left: 485px;
+    left: 170px;
     z-index: 2;
     height:150px;
     border-radius: 0%;
